image overflow fixed

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -38,7 +38,6 @@ markdown-body p {
     max-width: 850px;
     margin: 20px auto;
     padding: 15px;
-    border: 1px solid red;
 }
 
 
